--- a/worksheet/routinetemp.html
+++ b/worksheet/routinetemp.html
@@ -7,11 +7,84 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-
-    <title>Hello, world!</title>
+    <link href="./routine.css" rel="stylesheet" />
+    <title>Daily Routine</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>My Daily Routine</h1>
+      <h2>Trying to get a routine started is the hardest part. Once you do, you can feel better about everyday!</h2>
+<br>
+  <div class="container">
+
+    <div class="row">
+      <div class="col-4">
+        <h3>Date:</h3>
+      </div>
+      <div class="col-4">
+        <h3>Weather:</h3>
+      </div>
+      <div class="col-4">
+        <h3>Mood:</h3>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-4"> 
+        <p>Month/Day/Year</p>
+      </div>
+      <div class="col-4">
+        <p></p>
+      </div>
+      <div class="col-4">
+        <p></p>
+      </div>
+    </div>
+<br>
+<div class="row">
+  <h3>Top 3 Things You Want To Get Done.</h3>
+</div>
+
+<br>
+
+<div class="'row">
+  <div class="col-3">
+    <h3>ROUTINE</h3>
+    <h4>Time:</h4>
+    <p>10 AM</p>
+    <p>11 AM</p>
+    <p>12 PM</p>
+    <p>1 PM</p>
+    <p>2 PM</p>
+    <p>3 PM</p>
+    <p>4 PM</p>
+    <p>5 PM</p>
+    <p>6 PM</p>
+    <p>7 PM</p>
+    <p>8 PM</p>
+    <p>9 PM</p>
+    <p>10 PM</p>
+    <p>11 PM</p>
+    <p>12 AM</p>
+    <p>1 AM</p>
+    <p>2 AM</p>
+  </div>
+<div class="col-3">
+  <h4>Activity:</h4>
+</div>
+</div>
+
+
+
+
+
+
+
+
+
+  </div>
+
+
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
