--- a/worksheet/routinetemp.html
+++ b/worksheet/routinetemp.html
@@ -41,9 +41,10 @@
     </div>
 <br>
 <div class="row">
-  <h3>Top 3 Things You Want To Get Done.</h3>
+  <div class="col">
+    <h3>Chores:</h3>
+  </div>
 </div>
-
 <br>
 
 <div class="'row">
